issue-1: fixed alignment issue and change the primary color and primary background

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
-    --primary-color: #8a5069;
-    --primary-background: #f2f2f2
+    --primary-color: #614044;
+    --primary-background: #dcd0cd
 }
 
 html, body {
